test_memleak/gcc-asan/use_after_free.cpp
#include <iostream>

int main()
{
    int *array = new int[100];
    delete[] array;
    int a = array[0];  // error
    return 0;
}
